test/corpus/block_funk.txt
==================
Full block function
==================

block_funk #1(node_id: #33, entry: #1)
block #1 (<- #3, #5) (-> #6):
  %1_0 <- 5
  %2_0 <- %1_0
  terminator: goto(#6)

---

(source_file
  (block_funk
    (id)
    (id)
    (id)
    (block 
      (id)
      (predecessors (id) (id))
      (successors (id))

      (move (register) (number))
      (move (register) (register))

      (goto_terminator (id))
      )))
