test/corpus/instructions.txt
==================
Move instructions
==================

block_funk #1(node_id: #33, entry: #1)
block #1 (<- #3, #5) (-> #6):
  %1_0 <- 5
  %1_1 <- true
  %2_0 <- %1_0
  %3_0 <- false
  terminator: goto(#6)

---

(source_file
  (block_funk
    (id)
    (id)
    (id)
    (block 
      (id)
      (predecessors (id) (id))
      (successors (id))

      (instruction (register) (move (number)))
      (instruction (register) (move (true)))
      (instruction (register) (move (register)))
      (instruction (register) (move (false)))

      (terminator (goto (id))))))

==================
Binary instruction
==================

block_funk #1(node_id: #33, entry: #1)
block #1 (<- #3, #5) (-> #6):
  %1_0 <- 1 + 2
  %2_0 <- 1 - 2
  %3_0 <- 1 < 2
  %4_0 <- 2 > 2
  %5_0 <- 1 <= 2
  %6_0 <- 2 => 2
  %7_0 <- 2 == 2
  %8_0 <- 2 != 2
  terminator: goto(#6)

---

(source_file
  (block_funk
    (id)
    (id)
    (id)
    (block 
      (id)
      (predecessors (id) (id))
      (successors (id))

      (instruction (register) (bin_op (number) (number)))
      (instruction (register) (bin_op (number) (number)))
      (instruction (register) (bin_op (number) (number)))
      (instruction (register) (bin_op (number) (number)))
      (instruction (register) (bin_op (number) (number)))
      (instruction (register) (bin_op (number) (number)))
      (instruction (register) (bin_op (number) (number)))
      (instruction (register) (bin_op (number) (number)))

      (terminator (goto (id))))))
